<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Logo ou image de l'application -->

    <!-- Formulaire de connexion -->
    <TextView
        android:id="@+id/connexion_titre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titre_connexion"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/username_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nom_utilisateur" />

    <EditText
        android:id="@+id/password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mot_de_passe"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/connexion_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bouton_connexion" />

    <TextView
        android:id="@+id/connexion_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="18sp"
        android:textColor="@color/red"/>

    <!-- Ligne séparatrice -->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/darker_gray"/>

    <!-- Formulaire d'inscription -->
    <TextView
        android:id="@+id/inscription_titre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titre_inscrire"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/inscription_username_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nom_utilisateur" />

    <EditText
        android:id="@+id/inscription_password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mot_de_passe"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/inscription_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Inscription" />

    <TextView
        android:id="@+id/inscription_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="18sp"
        android:textColor="@color/red"
         />


</LinearLayout>


