<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/titre_resultats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titre_resultat_activity"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="30dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/ville_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resultat_ville"
            android:textSize="23sp" />

        <TextView
            android:id="@+id/ville_resultats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="23sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/temperature_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resultat_temperature"
            android:textSize="23sp" />

        <TextView
            android:id="@+id/temperature_resultats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="23sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/qualite_air_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resultat_qualite_air"
            android:textSize="23sp" />
        <TextView
            android:id="@+id/qualite_air_resultats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="23sp" />
    </LinearLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">

        <View
            android:id="@+id/rectangle_resultat"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:background="@color/red"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/rectangle_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_centerInParent="true"
            android:text="chargement..."/>

    </RelativeLayout>

    <TextView
        android:id="@+id/implicationSante"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ImplicationSante"
        android:textSize="19sp" />

    <TextView
        android:id="@+id/conseil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Conseil"
        android:textSize="19sp" />



</LinearLayout>